--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
             {
                 url: 'https://xzh93yp8j1.execute-api.ap-south-1.amazonaws.com/dev/docvault/v1/public/api-docs',
                 name: 'Docvault Service'
+            },
+            {
+                url: 'https://xzh93yp8j1.execute-api.ap-south-1.amazonaws.com/dev/plot/v1/public/api-docs',
+                name: 'Plot Service'
             }
             // {
             //     url: 'https://your-user-service.execute-api.ap-south-1.amazonaws.com/dev/users/v3/api-docs',
